--- a/Web2thPJT/.settings/org.eclipse.wst.common.component
+++ b/Web2thPJT/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Web2thPJT">
+    <wb-module deploy-name="lunchbox">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Web2thPJT"/>
-        <property name="java-output-path" value="/Web2thPJT/build/classes"/>
+        <property name="java-output-path" value="/lunchbox/build/classes"/>
+        <property name="context-root" value="lunchbox"/>
     </wb-module>
 </project-modules>
