--- a/lunchbox/.settings/org.eclipse.wst.common.component
+++ b/lunchbox/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,6 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="java-output-path" value="/lunchbox/build/classes"/>
-        <property name="context-root" value="lunchbox"/>
+        <property name="context-root_1" value="lunchbox"/>
     </wb-module>
 </project-modules>
